--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.8",
-    "@react-native-community/netinfo": "^11.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~49.0.13",
-    "expo-av": "~13.4.1",
+    "expo": "^52.0.35",
+    "expo-av": "~15.0.2",
     "expo-cli": "^6.3.10",
-    "expo-file-system": "~15.4.4",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
+    "expo-file-system": "~18.0.10",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
     "react-audio-visualize": "^1.1.3",
-    "react-native": "0.72.5",
+    "react-native": "0.76.7",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.11.3",
-    "react-native-reanimated": "^3.6.0",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.0.2",
     "socket.io-client": "^4.7.2",
     "ws": "^8.14.2"
