--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.0.2",
     "socket.io-client": "^4.7.2",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "expo-build-properties": "~0.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
