--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "^52.0.35",
     "expo-av": "~15.0.2",
+    "expo-build-properties": "~0.13.2",
     "expo-cli": "^6.3.10",
     "expo-file-system": "~18.0.10",
     "expo-status-bar": "~2.0.1",
@@ -29,8 +30,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.0.2",
     "socket.io-client": "^4.7.2",
-    "ws": "^8.14.2",
-    "expo-build-properties": "~0.13.2"
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
